manifests/Guardians.yaml
kind: Pod
apiVersion: v1
metadata:
  name: guardians-app
  labels:
    app: guardians
spec:
  containers:
    - name: goodbye-app
      image: hashicorp/http-echo
      args:
        - "-text= Hi!!! Welcome to the Guardians page"

---

kind: Service
apiVersion: v1
metadata:
  name: guardians-service
spec:
  selector:
    app: guardians
  ports:
    - name: http
      port: 80
      targetPort: 5678 # Default port for image
